# MLBuilder

./: .gitignore  README.md  pyproject.toml  requirements.txt
MLBuilder/: cli.py
MLBuilder/model/: mlmodel.py  model.py
MLBuilder/model/tflite/: tflitemodel.py
test/: tf_live_infrence.py
